--- a/css/home.css
+++ b/css/home.css
@@ -176,7 +176,7 @@ body {
 .trending-movies,
 .trending-series {
   width: 100%;
-  height: 85%;
+  min-height: 85%;
   max-height: fit-content;
   display: flex;
   flex-wrap: wrap;
@@ -192,8 +192,8 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 20rem;
-  width: calc(20rem/1.5);
+  height: 56vh;
+  width: 18vw;
   transition: transform ease-in-out 0.1s, box-shadow ease-in 0.1s;
 }
 
