--- a/css/home.css
+++ b/css/home.css
@@ -8,9 +8,8 @@ body {
 }
 
 .back-images-container {
-  margin-top: 10vh;
-  width: 100%;
-  height: 70%;
+  width: 100vw;
+  height: 70vh;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -22,7 +21,7 @@ body {
 
 .back-images-container::before {
   content: '';
-  height: 70%;
+  height: 70vh;
   width: 100%;
   position: absolute;
   background-color: rgba(0, 0, 0, 0.6);
@@ -30,9 +29,9 @@ body {
 
 .front-images-container {
   position: relative;
-  width: 20%;
-  min-width: 240px;
-  height: 85%;
+  height: calc(20vw/0.6666);
+  width: 20vw;
+  /* min-width: 240px; */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -125,7 +124,7 @@ body {
 .trending-movies-container,
 .trending-series-container {
   width: 100%;
-  height: 65%;
+  /* height: 65%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -138,7 +137,7 @@ body {
 .trending-series-header {
   width: 100%;
   height: 10%;
-  padding-left: 16px;
+  padding: 1rem;
   display: flex;
   align-items: center;
   background-color: #F8ECFB;
@@ -176,8 +175,9 @@ body {
 .trending-movies,
 .trending-series {
   width: 100%;
-  min-height: 85%;
-  max-height: fit-content;
+  height: 85%;
+  /* min-height: 85%;
+  max-height: fit-content; */
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -192,7 +192,7 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  height: 56vh;
+  height: calc(18vw/0.6666);
   width: 18vw;
   transition: transform ease-in-out 0.1s, box-shadow ease-out 0.1s;
 }
@@ -207,160 +207,4 @@ body {
 .trending-series_img:active {
   box-shadow: none;
   transform: scale(99%);
-}
-
-
-
-@media(max-width:48rem) {
-  .front-images-container {
-    height: 66.5%;
-    width: 27.2%;
-    min-width: 208px;
-  }
-
-  .slide-movie-info {
-    height: 80%;
-    width: 55%;
-  }
-
-  .slide-movie-title {
-    height: 20%;
-  }
-
-  .slide-movie-overview {
-    height: 70%;
-  }
-
-  .trending-movies-container,
-  .trending-series-container {
-    height: 48%;
-  }
-
-
-  .trending-movies a:nth-last-of-type(5),
-  .trending-series a:nth-last-of-type(5) {
-    display: none;
-  }
-
-  .trending-movies_img,
-  .trending-series_img {
-    height: 39vh;
-    width: 47vw;
-    min-width: 176px;
-    max-width: 176px;
-  }
-
-}
-
-@media only screen and (max-width:40rem) and (min-width:27rem) {
-  .front-images-container {
-    height: 75.7%;
-  }
-
-  .img-btn {
-    width: 4rem;
-    top: 107%;
-  }
-
-  #img-left {
-    right: 55%;
-  }
-
-  #img-right {
-    left: 55%;
-  }
-
-}
-
-@media(max-width:27rem) {
-  .back-images-container {
-    height: 90%;
-    flex-direction: column;
-    justify-content: space-evenly;
-  }
-
-  .back-images-container::before {
-    height: 90%;
-  }
-
-  .front-images-container {
-    width: 33.85%;
-    height: 47.6%;
-    min-height: 216px;
-    min-width: 144px;
-  }
-
-  .img-btn {
-    width: 1.6rem;
-    height: 1.6rem;
-  }
-
-  .slide-movie-info {
-    height: 45%;
-    width: 90%;
-  }
-
-  .slide-movie-title {
-    font-size: 1.4rem;
-  }
-
-  .slide-movie-overview {
-    height: 70%;
-    font-size: 0.75rem;
-  }
-
-  .trending-movies-container,
-  .trending-series-container {
-    height: 115%;
-  }
-
-  .trending-movies-header a,
-  .trending-series-header a {
-    font-size: 1.1rem;
-  }
-
-  .trending-movies-header i,
-  .trending-series-header i {
-    margin-left: 4px;
-    font-size: 0.7rem;
-  }
-
-  .trending-movies,
-  .trending-series {
-    flex-direction: column;
-  }
-
-
-  .trending-movies_img,
-  .trending-series_img {
-    height: 52.6vh;
-    width: 47vw;
-    max-height: 264px;
-    min-width: 176px;
-    max-width: 176px;
-  }
-
-}
-
-@media(max-width:20rem) {
-  .slide-movie-title {
-    font-size: 1.3rem;
-  }
-
-  .slide-movie-overview {
-    height: 70%;
-    font-size: 0.7rem;
-  }
-
-  .trending-movies-container,
-  .trending-series-container {
-    height: 100%;
-  }
-
-  .trending-movies_img,
-  .trending-series_img {
-    height: 43vh;
-    width: 45vw;
-    min-width: 144px;
-  }
 }
