--- a/shared.css
+++ b/shared.css
@@ -20,12 +20,14 @@
   --shadow-color: #510789; */
 }
 
+
 html {
   width: 100%;
   height: 100%;
 }
 
 body {
+  display: inline-block;
   width: 100%;
   height: 100%;
 }
@@ -34,11 +36,11 @@ body {
   position: fixed;
   top: 0;
   z-index: 10;
-  /* background-color: var(--nav-color); */
   background: linear-gradient(90deg, var(--nav-color), var(--nav-color2));
-  padding: 0rem 1rem;
-  width: 100%;
-  height: 10%;
+  padding: 0.5rem 1rem;
+  width: 100vw;
+  height: 10vh;
+  max-height: 3.125rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -54,9 +56,9 @@ body {
 }
 
 .main-search_box {
-  height: 65%;
-  width: 25%;
-  min-width: 240px;
+  height: 90%;
+  width: 20%;
+  min-width: 15rem;
   display: flex;
   align-items: center;
   background-color: var(--nav-color-contrast);
@@ -66,7 +68,7 @@ body {
 
 #search {
   background-color: var(--nav-color-contrast);
-  padding: 1rem;
+  padding: 0.8rem;
   height: 100%;
   width: 90%;
   font-size: 0.95rem;
@@ -83,7 +85,7 @@ body {
 #search-btn {
   background-color: var(--nav-color-contrast);
   height: 100%;
-  padding: 0.4rem;
+  padding: 0.3rem;
   border: none;
   /* border-width: 1px; */
   /* border-color: var(--shadow-color); */
@@ -99,8 +101,15 @@ body {
   transform: scale(90%);
 }
 
+main {
+  padding-bottom: 1rem;
+  margin-top: 3.125rem;
+  min-height: calc(100% - 3.125rem - 4.75rem);
+}
+
 .main-footer {
-  height: 15%;
+  height: 15vh;
+  max-height: 4.75rem;
   width: 100%;
   background-color: var(--footer-color);
 }
@@ -116,8 +125,7 @@ body {
   }
 
   .main-search_box {
-    height: 60%;
-    min-width: 256px;
+    min-width: 16rem;
   }
 
   #search {
@@ -145,8 +153,7 @@ body {
   }
 
   .main-search_box {
-    height: 60%;
-    min-width: 192px;
+    min-width: 12rem;
   }
 
   #search {
@@ -165,6 +172,6 @@ body {
 
 @media(max-width:20rem) {
   .main-search_box {
-    min-width: 160px;
+    min-width: 10rem;
   }
 }
