--- a/css/resHome.css
+++ b/css/resHome.css
@@ -1,215 +1,101 @@
- @media(max-width:80rem) and (min-height:32rem) {
-   .back-images-container {
-     height: 70vh;
-     max-height: 27.5rem;
-   }
+@media(max-width:48rem) {
+  .front-images-container {
+    height: 66.5%;
+    width: 27.2%;
+    min-width: 208px;
+  }
 
-   .back-images-container::before {
-     height: 70vh;
-     max-height: 27.5rem;
-   }
+  .slide-movie-info {
+    height: 80%;
+    width: 55%;
+  }
 
-   .front-images-container {
-     height: calc(27.2vw/0.6666);
-     width: 27.2vw;
-     min-width: 13rem;
-     min-height: 19.5rem;
-     max-width: 16rem;
-     max-height: 24rem;
-   }
+  .slide-movie-title {
+    height: 20%;
+  }
 
-   .slide-movie-info {
-     height: 80%;
-     width: 45%;
-   }
+  .slide-movie-overview {
+    height: 70%;
+  }
 
-   .slide-movie-title {
-     /* height: 25%; */
-     flex: 1;
-     align-items: center;
-     font-size: 1.5rem;
-   }
+  .trending-movies-container,
+  .trending-series-container {
+    height: 48%;
+  }
 
-   .slide-movie-overview {
-     /* height: 70%; */
-     flex: 2;
-     font-size: 0.9rem;
-   }
 
-   /* .trending-movies a:nth-last-of-type(5),
-   .trending-series a:nth-last-of-type(5) {
-     display: none;
-   } */
+  .trending-movies a:nth-last-of-type(5),
+  .trending-series a:nth-last-of-type(5) {
+    display: none;
+  }
 
-   .trending-movies_img,
-   .trending-series_img {
-     height: calc(18.25vw/0.6666);
-     width: 18.25vw;
-   }
- }
+  .trending-movies_img,
+  .trending-series_img {
+    height: 39vh;
+    width: 47vw;
+    min-width: 176px;
+    max-width: 176px;
+  }
 
- @media(max-width:38rem) and (min-height:32rem) {
-   /* .back-images-container {
-    height: 65vh;
+}
+
+@media(max-width:40rem) and (min-width:27rem) {
+  .front-images-container {
+    height: 75.7%;
+  }
+
+  .img-btn {
+    width: 4rem;
+    top: 107%;
+  }
+
+  #img-left {
+    right: 55%;
+  }
+
+  #img-right {
+    left: 55%;
+  }
+
+}
+
+@media(max-width:27rem) {
+  .back-images-container {
+    height: 90%;
+    flex-direction: column;
+    justify-content: space-evenly;
   }
 
   .back-images-container::before {
+    height: 90%;
+  }
+
+  .front-images-container {
+    width: 33.85%;
+    height: 47.6%;
+    min-width: 144px;
+  }
+
+  .img-btn {
+    width: 1.6rem;
+    height: 1.6rem;
+  }
+
+  .slide-movie-info {
+    height: 45%;
+    width: 90%;
+  }
+
+  .slide-movie-title {
+    font-size: 1.4rem;
+  }
+
+  .slide-movie-overview {
     height: 70%;
-  } */
+    font-size: 0.75rem;
+  }
 
-   .front-images-container {
-     height: calc(30.6vw/0.6666);
-     width: 30.6vw;
-     min-width: 11rem;
-     min-height: 16.5rem;
-   }
-
-   .img-btn {
-     height: 1.8rem;
-     width: 4rem;
-     top: 108%;
-   }
-
-   #img-left {
-     right: 55%;
-   }
-
-   #img-right {
-     left: 55%;
-   }
-
-   .slide-movie-info {
-     height: 80%;
-     width: 55%;
-   }
-
-   .slide-movie-title {
-     /* height: 20%; */
-     flex: 1;
-     align-items: center;
-     font-size: 1.5rem;
-   }
-
-   .slide-movie-overview {
-     /* height: 75%; */
-     flex: 2;
-     font-size: 0.8rem;
-   }
-
-   .trending-movies a:nth-last-of-type(5),
-   .trending-series a:nth-last-of-type(5) {
-     display: none;
-   }
-
-   .trending-movies_img,
-   .trending-series_img {
-     min-height: 12rem;
-     min-width: 8rem;
-   }
- }
-
- @media(max-width:27rem) and (min-height:32rem) {
-   .back-images-container {
-     min-height: calc(100vh - 3.125rem);
-     flex-direction: column;
-     justify-content: space-evenly;
-   }
-
-   .back-images-container::before {
-     min-height: calc(100vh - 3.125rem);
-   }
-
-   .front-images-container {
-     height: calc(37.6vw / 0.6666);
-     width: 37.6vw;
-     min-width: 12rem;
-     min-height: 18rem;
-   }
-
-   .slide-movie-info {
-     height: 45%;
-     width: 90%;
-   }
-
-   .slide-movie-title {
-     /* height: 25%; */
-     flex: 1;
-     align-items: center;
-     font-size: 1.3rem;
-   }
-
-   .slide-movie-overview {
-     /* height: 70%; */
-     flex: 2;
-     font-size: 0.7rem;
-   }
-
-   .img-btn {
-     top: 50%;
-     width: 2.4rem;
-     height: 2.4rem;
-   }
-
-
-   #img-left {
-     right: 105%;
-   }
-
-   #img-right {
-     left: 105%;
-   }
-
-   .trending-movies-header a,
-   .trending-series-header a {
-     font-size: 1.4rem;
-   }
-
-   .trending-movies-header i,
-   .trending-series-header i {
-     margin-left: 4px;
-     font-size: 0.7rem;
-   }
-
-   .trending-movies,
-   .trending-series {
-     height: calc((45.2vw / 0.6666) * 2.1);
-   }
-
-   .trending-movies_img,
-   .trending-series_img {
-     height: calc(45.2vw / 0.6666);
-     width: 45.2vw;
-     /* min-width: 176px;
-    max-width: 176px; */
-   }
- }
-
- @media(max-width:27rem) and (min-height:48rem) {
-
-   .front-images-container {
-     height: calc(56.5vw / 0.6666);
-     width: 56.5vw;
-   }
-
-   .slide-movie-info {
-     height: 45%;
-     width: 90%;
-   }
-
-   .slide-movie-title {
-     /* height: 25%; */
-     align-items: center;
-     font-size: 1.6rem;
-   }
-
-   .slide-movie-overview {
-     /* height: 70%; */
-     font-size: 0.95rem;
-   }
-
-
-
-   /* .trending-movies-container,
+  .trending-movies-container,
   .trending-series-container {
     height: 115%;
   }
@@ -223,25 +109,25 @@
   .trending-series-header i {
     margin-left: 4px;
     font-size: 0.7rem;
-  } */
+  }
 
-   /* .trending-movies,
+  .trending-movies,
   .trending-series {
     flex-direction: column;
-  } */
+  }
 
 
-   /* .trending-movies_img,
+  .trending-movies_img,
   .trending-series_img {
     height: 52.6vh;
     width: 47vw;
     min-width: 176px;
     max-width: 176px;
-  } */
+  }
 
- }
+}
 
- /* @media(max-width:20rem) and (min-height:32rem) {
+@media(max-width:20rem) {
   .slide-movie-title {
     font-size: 1.3rem;
   }
@@ -262,4 +148,4 @@
     width: 45vw;
     min-width: 144px;
   }
-} */
+}
