--- a/css/home.css
+++ b/css/home.css
@@ -6,7 +6,7 @@
   margin-top: 5.5rem;
   padding: 1rem;
   width: 100%;
-  height: 41.2rem;
+  height: 45rem;
   position: relative;
   display: flex;
   justify-content: space-evenly;
@@ -19,7 +19,7 @@
 
 .slide::before {
   content: '';
-  height: 41.2rem;
+  height: 45rem;
   width: 100%;
   position: absolute;
   background-color: rgba(0, 0, 0, .5);
@@ -134,7 +134,6 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
-  /* background-color: aqua; */
 }
 
 .movies__header,
@@ -145,30 +144,37 @@
   display: flex;
   align-items: center;
   background-color: #F8ECFB;
-  /* background-color: aqua; */
+
 }
 
 .movies__link,
 .series__link {
   cursor: pointer;
   font-size: 2.5rem;
+  font-weight: 600;
   font-family: var(--ubuntu-font);
   text-decoration: none;
-  color: rgba(0, 0, 0, 1);
+  color: transparent;
+  background: linear-gradient(90deg, var(--nav-color), var(--nav-color2));
+  -webkit-background-clip: text;
+  transition: all .2s ease;
 }
 
 .movies__link:hover,
 .series__link:hover {
-  color: rgba(0, 0, 0, .7);
+  opacity: .8;
+  transform: scale(105%);
 }
 
 .movies__link:active,
 .series__link:active {
-  color: rgba(0, 0, 0, .5);
+  opacity: .6;
+  transform: scale(95%);
 }
 
 .movies__header i,
 .series__header i {
+  color: var(--nav-color2);
   margin-left: 8px;
   font-size: 1.6rem;
   transform: translateY(-15%);
@@ -253,10 +259,16 @@
 /* 640px */
 @media(max-width:40rem) {
   .slide {
+    height: 50rem;
     flex-direction: column;
   }
 
+  .slide::before {
+    height: 50rem;
+  }
+
   .info {
+    margin-bottom: 4rem;
     min-height: 10%;
     width: 80%;
     background-color: rgba(0, 0, 0, .3);
