--- a/shared.css
+++ b/shared.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@400;600;700;800&display=swap');
 
 * {
   margin: 0;
@@ -14,6 +15,8 @@
   --body-color: #F8ECFB;
   --shadow-color: #3A373B;
   --ubuntu-font: 'Ubuntu',
+    sans-serif;
+  --rubic-font: 'Rubik',
     sans-serif;
   /* --body-color: #B872AF;
   --shadow-color: #510789; */
@@ -121,7 +124,7 @@ body {
   }
 
   .searchBox__input {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
   }
 
 }
