--- a/css/details.css
+++ b/css/details.css
@@ -1,7 +1,7 @@
 .backdrop__container {
   position: relative;
-  height: 100%;
   width: 100%;
+  height: 40rem;
 }
 
 .backdrop {
@@ -14,6 +14,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  animation: Opacity .4s ease-in-out;
 }
 
 .backdrop::before {
@@ -33,11 +34,13 @@
 .frontImage__img {
   border-radius: 8px;
   width: 100%;
+  animation: Opacity .8s ease-in-out;
 }
 
 .details {
+  padding: 1rem;
   background-color: rgba(0, 0, 0, 0.4);
-  height: 65%;
+  /* height: 65%; */
   width: 60%;
   z-index: 1;
   border-radius: 12px;
@@ -51,22 +54,31 @@
 }
 
 .name {
+  padding-bottom: 1rem;
   height: 25%;
   width: 97%;
   color: white;
   display: flex;
   align-items: flex-end;
   font-family: var(--ubuntu-font);
-  font-size: 2rem;
+  font-size: 3rem;
 }
 
 .rating {
+  padding-bottom: 1rem;
   height: 10%;
   width: 97%;
   color: white;
   display: flex;
   align-items: center;
+  font-size: 1.5rem;
   font-family: var(--ubuntu-font);
+  letter-spacing: .1rem;
+}
+
+.rating__icon {
+  padding-right: .5rem;
+  color: gold;
 }
 
 .overview {
@@ -75,5 +87,5 @@
   color: white;
   display: flex;
   align-items: flex-start;
-  font-size: 1.1rem;
+  font-size: 1.5rem;
 }
