--- a/css/home.css
+++ b/css/home.css
@@ -6,10 +6,6 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background-position: top;
-  background-size: cover;
-  background-repeat: no-repeat;
-  transition: background .4s ease-in-out;
 }
 
 .slide::before {
@@ -18,6 +14,19 @@
   width: 100%;
   position: absolute;
   background-color: rgba(0, 0, 0, .5);
+  z-index: 2;
+  animation: Opacity .4s ease-in-out;
+}
+
+.slide__backImg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
+  animation: Opacity .8s ease-in-out;
 }
 
 .frontImages {
@@ -36,7 +45,7 @@
   padding: 4% 5%;
   /* width: 3.5rem;
   height: 3.5rem; */
-  z-index: 2;
+  z-index: 5;
   top: 50%;
   background-color: transparent;
   color: rgba(255, 255, 255, .5);
@@ -73,9 +82,9 @@
   background-position: center center;
   background-size: cover; */
   border-radius: 12px;
-  z-index: 1;
+  z-index: 2;
   opacity: 0;
-  transition: .4s ease-in-out;
+  transition: .6s ease-in-out;
 }
 
 .active {
@@ -95,7 +104,7 @@
   background-color: rgba(0, 0, 0, .4);
   border: 1.5px solid rgba(255, 255, 255, 0.5);
   border-radius: 8px;
-  z-index: 1;
+  z-index: 2;
 }
 
 .info__title {
@@ -138,7 +147,7 @@
   padding-left: 1.6rem;
   display: flex;
   align-items: center;
-  background-color: #F8ECFB;
+  /* background-color: #F8ECFB; */
 
 }
 
@@ -181,7 +190,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  background-color: var(--body-color);
+  /* background-color: var(--body-color); */
   /* background-color: brown; */
 }
 
