--- a/shared.css
+++ b/shared.css
@@ -13,6 +13,16 @@
   }
 }
 
+@keyframes Opacity {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
 * {
   margin: 0;
   padding: 0;
